fetch2022Schedule -> generic fetchTeamSchedule
