# src/routes/fetchTeamSchedule.ts
@@ -6,18 +6,21 @@ module.exports = (app: any, dbHandler: any) => {
   const validation = {
     query: Joi.object({
       competition: Joi.string().required(),
+      team: Joi.string().required()
     }),
   }
-  app.get('/api/fetch2022Schedule', validate(validation, { keyByField: true }, {}), async (req: any, res:any) => {
-    let val: UserReturnData = new UserReturnData();
+  app.get('/api/fetchTeamSchedule', validate(validation, { keyByField: true }, {}), async (req: any, res:any) => {
+    const val: UserReturnData = new UserReturnData();
     const competition = String(req.query.competition);
+    const team = String(req.query.team);
 
-    val = await dbHandler.fetch2022Schedule(req.db, competition).catch((e) => { console.error(e); val.err_occur = true; });
+    val.data = await dbHandler.fetchTeamSchedule(req.db, competition, team).catch((e) => { console.error(e); val.err_occur = true; });
     if (val.err_occur === false) {
       res.json({
         success: true,
         competition,
-        data: val.data,
+        team,
+        data: val.data.data,
       });
     } else {
       res.status(StatusCodes.no_data).json({
